--- a/app/views/parents/partials/_form.html.erb
+++ b/app/views/parents/partials/_form.html.erb
@@ -18,9 +18,7 @@
         <%= f.label :Valor_cancelado %>
         <%= f.number_field :amount_paid, class: "form-control" %>
       </div>
-      <%= f.submit class: "btn btn-primary" %>
+      <%= f.submit class: "btn btn-info" %>
     <% end %>
-
-    <%= link_to "Lista de Padres", parents_path %>
   </div>
 </div>
