--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Home</a>
+  <a class="navbar-brand" href="/">Padres</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,9 +9,6 @@
       <li class="nav-item active">
         <a class="nav-link" href="/children">Niños <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Opciones
@@ -19,10 +16,10 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to "Crear Padre", new_parent_path, class: "dropdown-item" %>
           <%= link_to "Crear Niño", new_child_path, class: "dropdown-item" %>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
       <% if hacker_signed_in? %>
       <li class="nav-item">
         <%= link_to('Logout', destroy_hacker_session_path, method: :delete, class: "nav-link") %> 
@@ -33,9 +30,5 @@
       </li>
       <% end %>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
