add delete functionality for children

--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -16,6 +16,9 @@
         <td><%= child.last_name %></td>
         <td><%= child.age %></td>
         <td><%= child.identification %></td>
+        <td><%= link_to  "Editar", edit_child_path(child), class: "btn btn-info" %>
+            <%= link_to 'Eliminar', child, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %>
+        </td> 
       </tr>
     <% end %> 
   </tbody>
