add columns to parents and children

--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -6,6 +6,7 @@
     <th>Apellido</th>
     <th>Edad</th>
     <th>Tarjeta de Identidad</th>
+    <th>EPS</th>
     <th>Opciones</th>
   </tr>
   </thead>
@@ -17,6 +18,7 @@
         <td><%= child.last_name %></td>
         <td><%= child.age %></td>
         <td><%= child.identification %></td>
+        <td><%= child.health_provider %></td>
         <td><%= link_to  "Editar", edit_child_path(child), class: "btn btn-info" %>
             <%= link_to 'Eliminar', child, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %>
         </td>       
