--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,9 @@
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
       <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %> alert-dismissible">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <%= value %>
-         </div>
+      <div class="<%= flash_class(key) %>">
+            <%= value %>
+      </div>
       <% end %>
       <%= yield %>
     </div>
