correct flash messages styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,8 @@
   <body>
     <%= render 'layouts/partials/navbar' %>
     <div class="container">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-      <% flash.each do |key, value| %>
-      <div class="<%= flash_class(key) %>">
-            <%= value %>
-      </div>
-      <% end %>
+      
+      <%= render 'layouts/partials/messages' %>
       <%= yield %>
     </div>
   </body>
