--- a/app/views/parents/partials/_form.html.erb
+++ b/app/views/parents/partials/_form.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/errors', obj: @parent %>
 <div class="row">
   <div class="col-sm-6 offset-sm-3">
     <%= form_for @parent do |f| %>
