--- a/app/views/children/partials/_form.html.erb
+++ b/app/views/children/partials/_form.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/errors', obj: @child %>
 <div class="row">
   <div class="col-sm-6 offset-sm-3">
     <%= form_for @child do |f| %>
