--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -8,6 +8,10 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="/children">Niños <span class="sr-only">(current)</span></a>
+        
+      </li>
+      <li class = "nav-item">
+        <a class="nav-link" href="/crew_leaders">Crew Leaders </a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -15,6 +19,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to "Crear Padre", new_parent_path, class: "dropdown-item" %>
+          <%= link_to "Crear Crew Leader", new_crew_leader_path, class: "dropdown-item" %>
         </div>
       </li>
     </ul>
