add font-family Roboto to every h2

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,5 +1,11 @@
 @import "bootstrap"
+@import url('https://fonts.googleapis.com/css?family=Roboto')
+@import "parents"
 
+body
+  font-family: 'Roboto', sans-serif
+h2 
+  color: #17a2b8
 .digg_pagination
   margin: 20px 0
   background: white
