--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Padres VBS Colombia</h2>
+<h2 class="test-class">Padres VBS Colombia</h2>
 <table class="table">
   <thead class="thead-light">
   <tr>
