--- a/app/views/crew_leaders/show.html.erb
+++ b/app/views/crew_leaders/show.html.erb
@@ -19,8 +19,8 @@
         <td><%= child.age %></td>
         <td><%= child.identification %></td>
         <td><%= child.health_provider %></td>
-        <td><%= link_to  "Editar", edit_child_path(child), class: "btn btn-info" %>
-            <%= link_to 'Eliminar', child, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %>
+        <td><%= link_to '<i class="fas fa-edit"></i>'.html_safe, edit_child_path(child), class: "btn btn-info" %>
+            <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe, child, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %>
         </td>
       </tr>
     <% end %> 
