--- a/app/views/crew_leaders/show.html.erb
+++ b/app/views/crew_leaders/show.html.erb
@@ -1,28 +1,30 @@
 <h2><%= @crew_leader.first_name %> <%= @crew_leader.last_name %>'s Crew</h2>
 <br>
-<table class="table">
-  <thead class="thead-light">
-  <tr>
-    <th>Nombre</th>
-    <th>Apellido</th>
-    <th>Edad</th>
-    <th>Tarjeta de Identidad</th>
-    <th>EPS</th>
-    <th>Opciones</th>
-  </tr>
-  </thead>
-  <tbody>
-    <% @crew_leader.children.each do |child| %> 
-      <tr>
-        <td><%= link_to child.first_name, child %></td>
-        <td><%= child.last_name %></td>
-        <td><%= child.age %></td>
-        <td><%= child.identification %></td>
-        <td><%= child.health_provider %></td>
-        <td><%= link_to '<i class="fas fa-edit"></i>'.html_safe, edit_child_path(child), class: "btn btn-info" %>
-            <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe, child, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %>
-        </td>
-      </tr>
-    <% end %> 
-  </tbody>
-</table>
+<div class="table-responsive-sm">
+  <table class="table">
+    <thead class="thead-light">
+    <tr>
+      <th>Nombre</th>
+      <th>Apellido</th>
+      <th>Edad</th>
+      <th>Tarjeta de Identidad</th>
+      <th>EPS</th>
+      <th>Opciones</th>
+    </tr>
+    </thead>
+    <tbody>
+      <% @crew_leader.children.each do |child| %> 
+        <tr>
+          <td><%= link_to child.first_name, child %></td>
+          <td><%= child.last_name %></td>
+          <td><%= child.age %></td>
+          <td><%= child.identification %></td>
+          <td><%= child.health_provider %></td>
+          <td><%= link_to '<i class="fas fa-edit"></i>'.html_safe, edit_child_path(child), class: "btn btn-info" %>
+              <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe, child, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %>
+          </td>
+        </tr>
+      <% end %> 
+    </tbody>
+  </table>
+</div>
