--- a/app/views/crew_leaders/index.html.erb
+++ b/app/views/crew_leaders/index.html.erb
@@ -8,7 +8,8 @@
       <th>Email</th>
       <th>Teléfono</th>
       <th>Iglesia</th>
-      <th>Opciones</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
     </tr>
     </thead>
     <div class="digg_pagination"><%= will_paginate @crew_leaders, :page_links => false %></div>
@@ -22,6 +23,8 @@
           <td><%= crew_leader.church %></td>
           <td>
             <%= link_to '<i class="fas fa-edit"></i>'.html_safe, edit_crew_leader_path(crew_leader), class: "btn btn-info" %>
+          </td>
+          <td>
             <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe, { action: :destroy, id: crew_leader.id }, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %>
           </td>
         </tr>
