--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -1,31 +1,35 @@
 <h2>Hijos de <%= @parent.first_name %> <%= @parent.last_name %></h2>
-<table class="table">
-  <thead class="thead-light">
-  <tr>
-    <th>Nombre(s)</th>
-    <th>Apellido(s)</th>
-    <th>Edad</th>
-    <th>Tarjeta de Identidad</th>
-    <th>EPS</th>
-    <th>Opciones</th>
-  </tr>
-  </thead>
-  <tbody>
-    <% @parent.children.each do |child| %> 
-      <tr>
-        <td><%= link_to child.first_name, child %></td>
-        <td><%= child.last_name %></td>
-        <td><%= child.age %></td>
-        <td><%= child.identification %></td>
-        <td><%= child.health_provider %></td>
-        <td><%= link_to '<i class="fas fa-edit"></i>'.html_safe, edit_child_path(child), class: "btn btn-info" %>
-            <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe, child, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %>
-        </td> 
-      </tr>
-    <% end %> 
-  </tbody>
-</table>
-
+<div class="table-responsive-sm">
+  <table class="table">
+    <thead class="thead-light">
+    <tr>
+      <th>Nombre(s)</th>
+      <th>Apellido(s)</th>
+      <th>Edad</th>
+      <th>Tarjeta de Identidad</th>
+      <th>EPS</th>
+      <th>Editar</th>
+      <th>Eliminar</th>
+    </tr>
+    </thead>
+    <tbody>
+      <% @parent.children.each do |child| %> 
+        <tr>
+          <td><%= link_to child.first_name, child %></td>
+          <td><%= child.last_name %></td>
+          <td><%= child.age %></td>
+          <td><%= child.identification %></td>
+          <td><%= child.health_provider %></td>
+          <td><%= link_to '<i class="fas fa-edit"></i>'.html_safe, edit_child_path(child), class: "btn btn-info" %>
+          </td>
+          <td>
+              <%= link_to '<i class="far fa-trash-alt"></i>'.html_safe, child, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %>
+          </td> 
+        </tr>
+      <% end %> 
+    </tbody>
+  </table>
+</div>
 <br>
 <br>
 
