--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -1,4 +1,18 @@
 <h2 class="test-class">Padres VBS Colombia</h2>
+<br>
+<div class="row">
+  <div class="col-sm-6">
+    <%= form_tag({controller: "parents", action: "index"}, method: "get") do %>
+    <div class="form-group">
+      <%= text_field_tag :search_term, params[:search_term], class: 'form-control', placeholder: 'Búsqueda por nombres' %>
+    </div>
+    <div class = "form-group">
+      <%= submit_tag 'Buscar', class: 'form-control btn-info' %>
+     </div>
+    <% end %>
+  </div>
+</div>
+
 <div class="table-responsive-sm">
   <table class="table">
     <thead class="thead-light">
