--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -1,14 +1,11 @@
 <h2 class="test-class">Padres VBS Colombia</h2>
 <br>
 <div class="row">
-  <div class="col-sm-6">
-    <%= form_tag({controller: "parents", action: "index"}, method: "get") do %>
-    <div class="form-group">
-      <%= text_field_tag :search_term, params[:search_term], class: 'form-control', placeholder: 'Búsqueda por nombres' %>
-    </div>
-    <div class = "form-group">
-      <%= submit_tag 'Buscar', class: 'form-control btn-info' %>
-     </div>
+  <div class="col-sm-4 col-sm-offset-4">
+    <%= form_tag parents_path, method: :get do %>
+      <div class="form-group">
+        <%= text_field_tag :first_name, params[:first_name], class: "form-control", placeholder: "Búsqueda por Nombres" %>
+      </div>
     <% end %>
   </div>
 </div>
