--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -4,8 +4,12 @@
   <div class="col-sm-4 col-sm-offset-4">
     <%= form_tag parents_path, method: :get do %>
       <div class="form-group">
-        <%= text_field_tag :first_name, params[:first_name], class: "form-control", placeholder: "Búsqueda por Nombres" %>
+        <%= text_field_tag :first_name, params[:first_name], class: "form-control", placeholder: "Nombre" %>
       </div>
+      <div class="form-group">
+        <%= text_field_tag :church, params[:church], class: "form-control", placeholder: "Iglesia" %>
+      </div>
+      <%= submit_tag "Buscar", name: nil, class: "form-control btn btn-info" %>
     <% end %>
   </div>
 </div>
