--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -1,38 +1,38 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Home</a>
+  <a class="navbar-brand" href="/">VBSc</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/parents">Padres</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Padres
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <%= link_to "Listar Padres", parents_path, class: "dropdown-item" %>
+          <%= link_to "Crear Padre", new_parent_path, class: "dropdown-item" %>
+        </div>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/children">Niños</a>
-        
       </li>
-      <li class = "nav-item">
-        <a class="nav-link" href="/crew_leaders">Crew Leaders </a>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Crew Leaders
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <%= link_to "Listar Crew Leaders", crew_leaders_path, class: "dropdown-item" %>
+          <%= link_to "Crear Crew Leader", new_crew_leader_path, class: "dropdown-item" %>
+        </div>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Volunteers
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <%= link_to "Decoration", volunteers_path, class: "dropdown-item" %>
-          <%= link_to "Logistics", volunteers_path, class: "dropdown-item" %>
-          <%= link_to "Crear Volunteer", new_volunteer_path, class: "dropdown-item" %>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Opciones
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <%= link_to "Crear Padre", new_parent_path, class: "dropdown-item" %>
-          <%= link_to "Crear Crew Leader", new_crew_leader_path, class: "dropdown-item" %>
+          <%= link_to "Listar Volunteers", volunteers_path, class: "dropdown-item" %>
           <%= link_to "Crear Volunteer", new_volunteer_path, class: "dropdown-item" %>
         </div>
       </li>
