--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -1,4 +1,21 @@
 <h2>Volunteers VBS Colombia</h2>
+<br>
+<div class="row">
+  <div class="col-sm-4 col-sm-offset-4">
+    <%= form_tag volunteers_path, method: :get do %>
+      <div class="form-group">
+        <%= text_field_tag :first_name, params[:first_name], class: "form-control", placeholder: "Nombre" %>
+      </div>
+      <div class="form-group">
+        <%= text_field_tag :church, params[:church], class: "form-control", placeholder: "Iglesia" %>
+      </div>
+      <div class="form-group">
+        <%= select_tag "role_type", options_from_collection_for_select(Volunteer.role_types, "second", "first", params[:role_type]), prompt: "Rol", class: "form-control" %>
+      </div>
+      <%= submit_tag "Buscar", name: nil, class: "form-control btn btn-info" %>
+    <% end %>
+  </div>
+</div>
 <div class="table-responsive-sm">
   <table class="table">
     <thead class="thead-light">
