add form-control to select tags

--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -10,8 +10,9 @@
             CrewLeader.all, 
             :id, 
             :first_name, # this is name of method that will be called for every row,
-            :prompt => true  
-        ) %>
+            {prompt: "Selecciona el Crew Leader"}, 
+            {class: "form-control"}
+        )  %>
       </div>
       <%= f.submit class: "btn btn-info" %>
     <%end%>
