--- a/app/views/volunteers/partials/_form.html.erb
+++ b/app/views/volunteers/partials/_form.html.erb
@@ -32,8 +32,8 @@
         <%= f.number_field :identification, class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= f.label :escoger_rol %>
-        <%= f.select(:role_type, Volunteer.role_types.keys.map {|role| [role.titleize,role]}, class: "form-control") %>
+        <%= f.label :selecciona_rol %>
+        <%= f.select(:role_type, Volunteer.role_types.keys.map {|role| [role.titleize,role]}, {prompt: "Selecciona el Rol"}, {class: "form-control"}) %>
       </div>
       <%= f.submit class: "btn btn-info" %>
     <% end %>
