add vbsc logo and favicon

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,2 @@
-<h2>Bievenido a la Base de Datos de VBS Colombia!</h2>
+<h2 align="center">Bievenido a la Base de Datos de VBS Colombia!</h2>
+<%= image_tag('homepage-image.png', id: "homepage-image") %>
