--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -2,7 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto')
 @import "parents"
 @import "pagination"
+@import "home"
 body
   font-family: 'Roboto', sans-serif
 h2 
   color: #17a2b8
+#vbs-logo
+  width: 100px
