--- a/app/views/children/index.html.erb
+++ b/app/views/children/index.html.erb
@@ -1,4 +1,16 @@
 <h2>Niños VBS Colombia</h2>
+<br>
+<div class="row">
+  <div class="col-sm-4 col-sm-offset-4">
+    <%= form_tag children_path, method: :get do %>
+      <div class="form-group">
+        <%= text_field_tag :first_name, params[:first_name], class: "form-control", placeholder: "Nombre" %>
+      </div>
+      <%= submit_tag "Buscar", name: nil, class: "form-control btn btn-info" %>
+    <% end %>
+  </div>
+</div>
+<br>
 <div class="table-responsive-sm">
   <table class="table">
     <thead class="thead-light">
