--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
     <div class="container">
       
       <%= render 'layouts/partials/messages' %>
+
       <%= yield %>
+      <%= render 'layouts/partials/footer' %>
     </div>
   </body>
 </html>
