--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
-<h2 align="center">Bienvenido a la Base de Datos de VBS Colombia!</h2>
+<h2 align="center">Plataforma Administrativa VBS Colombia 2018</h2>
 <%= image_tag('homepage-image.png', id: "homepage-image") %>
