--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h2 align="center">Plataforma Administrativa VBS Colombia 2018</h2>
-<%= image_tag('homepage-image.png', id: "homepage-image") %>
+
+<div class="jumbotron">
+  <h2 align="center">Plataforma Administrativa VBS Colombia 2018</h2>
+  <%= image_tag('homepage-image.png', id: "homepage-image") %>
+  <br>
+  <div align="center">
+  <%= link_to "Asigna Los Crews!", asign_crews_path, class: "asign-crews btn btn-info" %>
+  </div>
+</div>
