--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -7,5 +7,12 @@ body
   font-family: 'Roboto', sans-serif
 h2 
   color: #17a2b8
+  font-size: 16px
+p, td, th, label, a
+  font-size: 14px
+.form-control
+  font-size: 14px
+.btn 
+  font-size: 14px
 #vbs-logo
   width: 100px
