finish sidebar implementation

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,6 +1,7 @@
 @import "bootstrap"
 @import url('https://fonts.googleapis.com/css?family=Roboto')
 @import "parents"
+@import "sidebar"
 @import "home"
 body
   font-family: 'Roboto', sans-serif
