--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,5 +5,6 @@
   <br>
   <div align="center">
   <%= link_to "Asigna Los Crews!", asign_crews_path, class: "asign-crews btn btn-info" %>
+  <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
   </div>
 </div>
