--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -1,7 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">
-    <%= image_tag('vbspng.png', id: "vbs-logo") %>
-  </a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light d-md-none">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -41,11 +38,11 @@
     <ul class="navbar-nav ml-auto">
       <% if hacker_signed_in? %>
       <li class="nav-item">
-        <%= link_to('Logout', destroy_hacker_session_path, method: :delete, class: "nav-link") %> 
+        <%= link_to('Logout', destroy_hacker_session_path, method: :delete, class: "nav-link") %>
       </li>
       <% else %>
       <li class="nav-item">
-        <%= link_to('Login', new_hacker_session_path, class:"nav-link")  %>  
+        <%= link_to('Login', new_hacker_session_path, class:"nav-link")  %>
       </li>
       <% end %>
     </ul>
