implement search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,14 +17,13 @@
         <%= render 'layouts/partials/sidebar' %>
         <div id="#page-content-wrapper">
           <%= render 'layouts/partials/navbar' %>
-          <div class="container">
-          <br>
+          <%= render 'layouts/partials/search' %>
           <%= render 'layouts/partials/messages' %>
           <%= yield %>
-        </div>
+
         <%= render 'layouts/partials/footer' %>
       </div>
-    <div id="wrapper">
+    <div/>
 
   </body>
 </html>
